--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
+    "axios": "^1.7.7",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email-validator": "^1.0.2",
     "react-icons": "^5.3.0",
-    "react-router": "^7.0.1"
+    "react-router": "^7.0.1",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
