--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
     "@stomp/stompjs": "^7.0.0",
+    "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.7",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
