--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.7",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-email-validator": "^1.0.2",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "sonner": "^1.7.0"
   },
