--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@stomp/stompjs": "^7.0.0",
+    "@stream-io/video-react-sdk": "^1.8.7",
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.7",
     "iconsax-react": "^0.0.8",
@@ -38,6 +39,6 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^5.4.11"
   }
 }
