--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-hook/media-query": "^1.1.1",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-email-validator": "^1.0.2",
     "react-icons": "^5.3.0",
