--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-email-validator": "^1.0.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.14.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "sonner": "^1.7.0"
