--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@stomp/stompjs": "^7.0.0",
+    "@stream-io/audio-filters-web": "^0.2.2",
     "@stream-io/video-react-sdk": "^1.8.7",
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.3",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
