--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-email-validator": "^1.0.2",
