--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-email-validator": "^1.0.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.14.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "sonner": "^1.7.0"
@@ -35,6 +36,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
