--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
+    "firebase": "^11.4.0",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
