--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.3",
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@schedule-x/calendar": "^2.15.1",
@@ -22,8 +23,10 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.2",
     "iconsax-react": "^0.0.8",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.485.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
